<resources>
    <string name="app_name">BeerRecipes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="beer_list">Beer List</string>
    <string name="favourites">Favourites</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="tagline">Tagline</string>
    <string name="description">Description</string>
    <string name="mash">Mash</string>
    <string name="ferment">Ferment</string>
    <string name="twist">Twist</string>
    <string name="method">Method</string>
    <string name="ibu">IBU</string>
    <string name="abv">ABV</string>
</resources>